--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -9,6 +9,89 @@
   },
   "Header": {
     "title": "كل شيئ تحتاجة لبناء ",
-    "span": "عمل ضخم"
+    "span": "عمل ضخم",
+    "description": "تحقق من الأساليب والأدلة والتمارين التي أثبتت جدواها والتي تساعد على تحسين العمل وجعل الناس أكثر سعادة.",
+    "btnPrimary": "اعرف المزيد",
+    "btnSecondary": "شاهد النسخة التجريبية",
+    "text": "موثوق به من قبل أكثر من مليون عميل"
+  },
+  "FeaturesSection": {
+    "MainTitle": {
+      "top": "ميزاتنا",
+      "center": "الفوائد الرئيسية لدينا",
+      "bottom": "تم تصميم خدماتنا لتلبية احتياجاتك وأهدافك المحددة"
+    },
+    "TextCard": {
+      "title1": "هيكل المشروع",
+      "text1": "تحقق من الأساليب والأدلة والتمارين التي أثبتت جدواها والتي تساعد على تحسين العمل وجعل الناس أكثر سعادة.",
+      "title2": "متجاوب",
+      "text2": "يأتي نظام التصميم ومجموعة واجهة المستخدم مع شاشات كاملة الاستجابة للأجهزة اللوحية والأجهزة المحمولة.",
+      "title3": "المراسلة",
+      "text3": "على الهاتف المحمول ، يمكن للعملاء إرسال رسائل نصية أو صوتية إلى الوكلاء ، مثل استخدام أي تطبيق مراسلة"
+    }
+  },
+  "homeadd": {
+    "title": "تبسيط سير عملك مع SaaS: ابدأ الآن",
+    "subtitle": "ابق على اطلاع بأحدث المعلومات ذات الصلة",
+    "adds": {
+      "one": "صفحات غير محدودة",
+      "two": "دخول سهل",
+      "three": "نسخة تجريبية مجانية لمدة 14 يومًا"
+    }
+  },
+  "FAQ": {
+    "MainTitle": {
+      "title": "أسئلة مكررة",
+      "text": "حاولنا الإجابة على معظم الأسئلة الشائعة ، إذا كان لديك أي أسئلة إضافية ، فيرجى الاتصال بفريقنا الودود"
+    },
+    "Questions": {
+      "one": {
+        "question": "كيف يمكن لمجموعة WafiTop ونظام التصميم مساعدتي؟",
+        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+      },
+      "two": {
+        "question": "ما هى سياسة الأسترجاع",
+        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+      },
+      "three": {
+        "question": "كيف يمكنني الاتصال بالدعم الفنى",
+        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+      },
+      "four": {
+        "question": "ما هي طرق الدفع المقبولة لديكم؟",
+        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+      },
+      "five": {
+        "question": "ماذا يقدم البرمامج",
+        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+      }
+    },
+    "Contact": {
+      "title": "لا يزال لديك أسئلة؟",
+      "text": "نأسف لعدم تمكننا من تزويدك بالمعلومات التي كنت تبحث عنها. يرجى الاتصال بنا وسنسعد بمساعدتك.",
+      "btn": "تواصل معنا"
+    }
+  },
+  "Blog": {
+    "MainTitle": {
+      "top": "مدونة",
+      "center": "أخبارنا الجديدة",
+      "bottom": "مدونتنا هي أكثر من مجرد مجموعة من المقالات - إنها مركز للأفكار والإلهام والمناقشات المحفزة للتفكير."
+    },
+    "Card": {
+      "title": "قابل مصمم الويب في الاستوديو الخاص به في خميس مشيط",
+      "text": "سنتعرف على المصمم وفلسفته التصميمية ، وكذلك نلقي نظرة ...",
+      "more": "مزيد"
+    },
+    "Button": "تعلم المزيد"
+  },
+  "FreeTrial": {
+    "title": "أدخل عنوان بريدك الإلكتروني وابدأ مجانًا",
+    "text": "ابق على اطلاع دائم بالمعلومات الأكثر صلة ومجموعاتنا الجديدة والأخبار والعروض الخاصة!",
+    "placeholder": "عنوان البريد الإلكتروني الخاص بك",
+    "btn": "اشترك الأن"
+  },
+  "OurClients": {
+    "title": "عملائنا"
   }
 }
