--- a/public/assets/locales/ar/translation.json
+++ b/public/assets/locales/ar/translation.json
@@ -46,24 +46,24 @@
     },
     "Questions": {
       "one": {
-        "question": "كيف يمكن لمجموعة WafiTop ونظام التصميم مساعدتي؟",
-        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+        "question": "كيف يمكن لمجموعة Ahmed Medhat ونظام التصميم مساعدتي؟",
+        "answer": "الميزة الرئيسية لـ Ahmed Medhat أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
       },
       "two": {
         "question": "ما هى سياسة الأسترجاع",
-        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+        "answer": "الميزة الرئيسية لـ Ahmed Medhat أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
       },
       "three": {
         "question": "كيف يمكنني الاتصال بالدعم الفنى",
-        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+        "answer": "الميزة الرئيسية لـ Ahmed Medhat أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
       },
       "four": {
         "question": "ما هي طرق الدفع المقبولة لديكم؟",
-        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+        "answer": "الميزة الرئيسية لـ Ahmed Medhat أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
       },
       "five": {
         "question": "ماذا يقدم البرمامج",
-        "answer": "الميزة الرئيسية لـ WafiTop أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
+        "answer": "الميزة الرئيسية لـ Ahmed Medhat أنه يوفر لك الوقت. إذا كان يوفر لك الوقت ، فإنه يوفر لك المال تلقائيًا. لم تعد بحاجة إلى إنشاء مجموعة أدوات واجهة مستخدم جديدة من البداية قبل بدء كل مشروع. استخدم WafitTop في عدد غير محدود من المشاريع ووفر مئات الساعات وآلاف الدولارات."
       }
     },
     "Contact": {
@@ -93,5 +93,37 @@
   },
   "OurClients": {
     "title": "عملائنا"
+  },
+  "Footer": {
+    "left": {
+      "logo": "Ahmed Medhat",
+      "text": "نحن نحب العمل مع الأشخاص الطموحين. فلنقم ببناء شيء عظيم معًا الآن."
+    },
+    "right": {
+      "section1": {
+        "title": "شركة"
+      },
+      "section2": {
+        "title": "الدعم",
+        "list": {
+          "one": "مركز الدعم",
+          "two": "الحاله",
+          "three": "الأبلاغ عن عطل",
+          "four": "التواصل عبر الدردشة",
+          "five": "الدعم"
+        }
+      },
+      "section3": {
+        "title": "تواصل معنا "
+      }
+    },
+    "bottom": {
+      "left": " جميع الحقوق محفوظة",
+
+      "right": {
+        "terms": "شروط الخدمة",
+        "privacy": "سياسة الخصوصية"
+      }
+    }
   }
 }
